package edu.illinoistech.hawk.hwijaya.op;

/**
 * Interface for the EnterPinMsg operation in the OutputProcessor.
 */
public interface EnterPinMsg {
    void enterPinMsg();
}
